--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "react-router-dom": "^6.9.0",
     "react-scripts": "5.0.1",
     "recoil": "^0.7.7",
+    "recoil-persist": "^4.2.0",
     "sockjs-client": "^1.6.1",
     "styled-components": "^5.3.8",
     "web-vitals": "^2.1.0"
